--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
 <body>
     <!--Preloader area start here-->
-    <!-- <section class="loader_first" style="background-color:#C27317">
+    <section class="loader_first" style="background-color:goldenrod">
         <div class="loader_first_inner">
             <div class="circular-spinner"></div>
         </div>
-    </section> -->
+    </section>
     <!--Preloader area End here-->
 
     <!--Header Start-->
@@ -122,7 +122,7 @@
     <div class="bithu_v1_baner_sect" id="home">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6" style="justify-content: center;">
                     <div class="bithu_v1_baner_left">
                         <h2>Welcome To 🎯 Optimus Dogelon  </h2>
                         <h3><span class="count">5555</span> HOLDERS</h3>
@@ -145,11 +145,11 @@
 
                     </div>
                 </div>
-                <div class="col-lg-6 mb-5">
+                <div class="col-lg-6 " style="justify-content: center;" >
                     <div class="bithu_v1_baner_right">
                         <div class="bithu_v1_baner_right_img_sect">
                             <div class="bithu_v1_baner_right_img_bg">
-                                <img src="logo.png" alt="">
+                                <img src="logo.png" alt="" class="w-100 h-100 pe-4 pb-55">
                             </div>
 
                         </div>
